crates/aranya-policy-compiler/tests/data/commands/no_return_in_seal.fail.snap
---
source: crates/aranya-policy-compiler/tests/tests.rs
expression: error
---
error: missing return statement
  |
3 |     seal { let x = 3 }
  |            ^^^^^^^^^^ no return found in this body
